@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/db
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.271 2008/09/20 14:52:39 ranger Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.272 2009/02/07 08:06:45 vapier Exp $
+
+  07 Feb 2009; Mike Frysinger <vapier@gentoo.org> db-4.6.21_p1.ebuild,
+  db-4.6.21_p3.ebuild, db-4.6.21_p3-r1.ebuild, db-4.7.25.ebuild,
+  db-4.7.25_p1.ebuild, db-4.7.25_p1-r1.ebuild:
+  Drop USE=bootstrap #256439.
 
   20 Sep 2008; Brent Baude <ranger@gentoo.org> db-3.2.9_p2.ebuild,
   db-4.2.52_p5-r1.ebuild, db-4.3.29_p1-r1.ebuild, db-4.5.20_p2-r1.ebuild:
